test/corpus/00_countries.txt
================================================================================
00_countries
================================================================================
# Special countries..
REB = "countries/Rebels.txt"
PIR = "countries/Pirates.txt"
NAT = "countries/Natives.txt"

#Scandinavia
SWE	= "countries/Sweden.txt"
DAN	= "countries/Denmark.txt"
FIN	= "countries/Finland.txt"
GOT	= "countries/Gotland.txt"
NOR	= "countries/Norway.txt"
SHL	= "countries/Holstein.txt"
SCA	= "countries/Scandinavia.txt"
EST = "countries/Estonia.txt"
LVA = "countries/Livonia.txt"
LTG = "countries/Latgalia.txt"
SMI = "countries/Sami.txt"
KRL = "countries/Karelia.txt"
ICE = "countries/Iceland.txt"

#Balkans
ACH	= "countries/PrincipalityOfAchaia.txt"
ALB	= "countries/Albania.txt"
ATH	= "countries/Athens.txt"
BOS	= "countries/Bosnia.txt"
BUL	= "countries/Bulgaria.txt"
BYZ	= "countries/ByzantineEmpire.txt"
LAE	= "countries/Latin Empire.txt"
CEP	= "countries/Corfu.txt"
CRO	= "countries/Croatia.txt"
CRT	= "countries/Crete.txt"
CYP	= "countries/Cyprus.txt"
DAL = "countries/Dalmatia.txt"
EPI	= "countries/Epirus.txt"
GRE	= "countries/Greece.txt"
KNI	= "countries/Knights.txt"
MOE	= "countries/Morea.txt"
MOL	= "countries/Moldavia.txt"
MON	= "countries/Montenegro.txt"
NAX	= "countries/Naxos.txt"
RAG	= "countries/Ragusa.txt"
RMN	= "countries/Romania.txt"
SER	= "countries/Serbia.txt"
TRA	= "countries/Transylvania.txt"
WAL	= "countries/Wallachia.txt"
HUN	= "countries/Hungary.txt"
SLO = "countries/Slovakia.txt"
TUR	= "countries/Ottomans.txt"

#British Isles 
CNN = "countries/Connacht.txt"
CRN	= "countries/Cornwall.txt"
ENG	= "countries/England.txt"
LEI = "countries/Leinster.txt"
IRE	= "countries/Ireland.txt"
MNS = "countries/IRE_Munster.txt"
SCO	= "countries/Scotland.txt"
TYR = "countries/Tyrone.txt"
WLS	= "countries/Wales.txt"
NOL = "countries/Northumberland.txt"
GBR	= "countries/GreatBritain.txt"
AVE = "countries/AngevinEmpire.txt"
MTH = "countries/Meath.txt"
ULS = "countries/Ulster.txt"
DMS = "countries/Desmond.txt" #Earldom of Desmond
SLN = "countries/Sligo.txt"
KID = "countries/Kildare.txt"
HSC = "countries/Highlands.txt"
ORD = "countries/Ormond.txt"
TRY = "countries/Tyrconnell.txt"
FLY = "countries/Faly.txt"
MCM = "countries/MacCarthy.txt" #Kingdom of Desmond
KOI = "countries/Mann.txt"
LOI = "countries/TheIsles.txt"
EIC	= "countries/EastIndiaCompany.txt"

#Colonies
BRZ	= "countries/Brazil.txt"
CAN	= "countries/Canada.txt"
CHL	= "countries/Chile.txt"
COL	= "countries/Colombia.txt"
HAT	= "countries/Haiti.txt"
LAP	= "countries/LaPlata.txt"
LOU	= "countries/Louisiana.txt"
MEX	= "countries/Mexico.txt"
PEU	= "countries/Peru.txt"
PRG	= "countries/Paraguay.txt"
QUE	= "countries/Quebec.txt"
CAM	= "countries/UPCA.txt"
USA	= "countries/USA.txt"
VNZ	= "countries/Venezuela.txt"
AUS = "countries/Australia.txt"
CAL = "countries/California.txt"
TEX = "countries/Texas.txt"
CSC = "countries/Cascadia.txt"
ALA = "countries/Alaska.txt"
NZL = "countries/Zealandia.txt"
ILI = "countries/Illinois.txt"
FLO = "countries/Florida.txt"
VRM = "countries/Vermont.txt"
SNA = "countries/Sonora.txt"
WSI = "countries/WestIndies.txt"
CUB = "countries/Cuba.txt"

#Eastern Europe
DNZ	= "countries/Danzig.txt"
KRA	= "countries/Krakow.txt"
LIT	= "countries/Lithuania.txt"
LIV	= "countries/LivonianOrder.txt"
MAZ	= "countries/Mazovia.txt"
POL	= "countries/Poland.txt"
PRU	= "countries/Prussia.txt"
KUR	= "countries/Kurland.txt"
RIG	= "countries/Riga.txt"
TEU	= "countries/Teutonicorder.txt"
PLC = "countries/TheCommonwealth.txt"
VOL	= "countries/Volyn.txt"
KIE	= "countries/Kiev.txt"
CHR	= "countries/Chernigov.txt"
OKA = "countries/Oka.txt"

#France 
ALE = "countries/Alencon.txt"
ALS	= "countries/Alsace.txt"
AMG	= "countries/Armagnac.txt"
AUV	= "countries/Auvergne.txt"
AVI	= "countries/Avignon.txt"
BOU	= "countries/Bourbonnais.txt"
BRI	= "countries/Brittany.txt"
BUR	= "countries/Burgundy.txt"
CHP	= "countries/Champagne.txt"
COR	= "countries/Corsica.txt"
DAU	= "countries/Dauphine.txt"
FOI	= "countries/Foix.txt"
FRA	= "countries/France.txt"
GUY	= "countries/Gascony.txt"
NEV	= "countries/Nevers.txt"
NRM	= "countries/Normandy.txt"
ORL	= "countries/Orleans.txt"
PIC	= "countries/Picardy.txt"
PRO	= "countries/Provence.txt"
SPI	= "countries/SardiniaPiedmont.txt"
TOU	= "countries/Toulouse.txt"
BER	= "countries/Berry.txt"
	
#HRE
AAC = "countries/Aachen.txt" 
ANH	= "countries/Anhalt.txt"
ANS	= "countries/Ansbach.txt"
AUG = "countries/Augsburg.txt"
BAD	= "countries/Baden.txt"
BAV	= "countries/Bavaria.txt"
BOH	= "countries/Bohemia.txt"
BRA	= "countries/Brandenburg.txt"
BRE	= "countries/Bremen.txt"
BRU	= "countries/Brunswick.txt"
EFR = "countries/EastFrisia.txt"
FRN	= "countries/Frankfurt.txt"
GER	= "countries/Germany.txt"
HAB	= "countries/Austria.txt"
HAM	= "countries/Hamburg.txt"
HAN	= "countries/Hannover.txt"
HES	= "countries/Hessen.txt"
HLR = "countries/HolyRomanEmpire.txt"
KLE	= "countries/Kleves.txt"
KOL	= "countries/Cologne.txt"
LAU = "countries/Lauenburg.txt"
LOR	= "countries/Lorraine.txt"
LUN	= "countries/Luneburg.txt"
MAG	= "countries/Magdeburg.txt"
MAI	= "countries/Mainz.txt"
MEI	= "countries/Meissen.txt"
MKL	= "countries/Mecklenburg.txt"
MUN	= "countries/Munster.txt"
MVA = "countries/Moravia.txt"
OLD	= "countries/Oldenburg.txt"
PAL	= "countries/Palatinate.txt"
POM	= "countries/Pommerania.txt"
SAX	= "countries/Saxony.txt"
SIL	= "countries/Silesia.txt"
SLZ	= "countries/Salzburg.txt"
STY	= "countries/Styria.txt"
SWI	= "countries/Schweiz.txt"
THU	= "countries/Thuringia.txt"
TIR	= "countries/Tirol.txt"
TRI	= "countries/Trier.txt"
ULM = "countries/Ulm.txt"
WBG	= "countries/Wurzburg.txt"
WES	= "countries/Westfalia.txt"
WUR	= "countries/Wurttemberg.txt"
NUM = "countries/Nuremberg.txt"
MEM = "countries/Memmingen.txt"
VER = "countries/Verden.txt"
NSA = "countries/Nassau.txt"
RVA = "countries/Ravensburg.txt"
DTT = "countries/Dithmarschen.txt"
AUH = "countries/Austriahungary.txt"
GMA = "countries/Greatmoravia.txt"
	
#Spain
ARA	= "countries/Aragon.txt"
CAS	= "countries/Castille.txt"
CAT	= "countries/Catalunya.txt"
GRA	= "countries/Granada.txt"
NAV	= "countries/Navarra.txt"
POR	= "countries/Portugal.txt"
SPA	= "countries/Spain.txt"
GAL	= "countries/Galicia.txt"
LON = "countries/Leon.txt"
ADU = "countries/Andalusia.txt"
VAL = "countries/Valencia.txt"
ASU = "countries/Asturias.txt"
MJO = "countries/Majorca.txt"

#Italy
AQU	= "countries/Aquileia.txt"
ETR	= "countries/Etruria.txt"
FER	= "countries/Ferrara.txt"
GEN	= "countries/Genoa.txt"
ITA	= "countries/Italy.txt"
MAN	= "countries/Mantua.txt"
MLO	= "countries/Milan.txt"
MOD	= "countries/Modena.txt"
NAP	= "countries/Naples.txt"
PAP	= "countries/Papal.txt"
PAR	= "countries/Parma.txt"
PIS	= "countries/Pisa.txt"
SAR	= "countries/Sardinia.txt"
SAV	= "countries/Savoy.txt"
SIC	= "countries/Sicily.txt"
SIE	= "countries/Siena.txt"
TUS	= "countries/Tuscany.txt"
URB	= "countries/Urbino.txt"
VEN	= "countries/Venice.txt"
MFA = "countries/Montferrat.txt"
LUC = "countries/Lucca.txt"
LAN	= "countries/Florence.txt"
JAI	= "countries/Malta.txt"

#Low Countries
BRB	= "countries/Brabant.txt"
FLA	= "countries/Flanders.txt"
FRI	= "countries/Friesland.txt"
GEL	= "countries/Gelre.txt"
HAI	= "countries/Hainaut.txt"
HOL	= "countries/Holland.txt"
LIE	= "countries/Liege.txt"
LUX	= "countries/Luxembourg.txt"
NED	= "countries/Netherlands.txt"
UTR	= "countries/Utrecht.txt"
VOC = "countries/VOC.txt"

#Russia 
ARM	= "countries/Armenia.txt"
AST	= "countries/Astrakhan.txt"
CRI	= "countries/Crimea.txt"
GEO	= "countries/Georgia.txt"
KAZ	= "countries/Kazan.txt"
MOS	= "countries/Muscowy.txt"
NOV	= "countries/Novgorod.txt"
PSK	= "countries/Pskov.txt"
QAS	= "countries/QasimKhanate.txt"
RUS	= "countries/Russia.txt"
RYA	= "countries/Ryazan.txt"
TVE	= "countries/Tver.txt"
UKR	= "countries/Ukraine.txt"
YAR	= "countries/Yaroslavl.txt"
ZAZ	= "countries/Zaporozhie.txt"
NOG	= "countries/Nogai.txt"
SIB	= "countries/Sibir.txt"
PLT	= "countries/Polotsk.txt"
PRM = "countries/Perm.txt"
FEO	= "countries/Theodoro.txt"
BSH	= "countries/Bashkiria.txt"
BLO = "countries/Beloozero.txt"
RSO = "countries/Rostov.txt"

GOL	= "countries/GreatHorde.txt"
GLH = "countries/GoldenHorde.txt"

#Arabia	
ADE	= "countries/Aden.txt"
ALH	= "countries/Haasa.txt"
ANZ = "countries/Anizah.txt"
ARB = "countries/Arabia.txt"
ARD = "countries/Ardalan.txt"
BHT = "countries/Bohtan.txt"
DAW = "countries/Dawasir.txt"
ERE = "countries/Eretna.txt"
FAD = "countries/Fadl.txt"
GRM = "countries/Germiyan.txt"
HDR = "countries/Hadramut.txt"
HED	= "countries/Hedjaz.txt"
LEB = "countries/Lebanon.txt"
MAK = "countries/Makuria.txt"
MDA = "countries/Medina.txt"
MFL = "countries/Mikhlaf.txt"
MHR = "countries/Mahra.txt"
NAJ	= "countries/Najd.txt"
NJR = "countries/Najran.txt"
OMA	= "countries/Oman.txt"
RAS = "countries/Rassids.txt"
SHM = "countries/Shammar.txt"
SHR	= "countries/Sharjah.txt"
SRV = "countries/Shirvanshah.txt"
YAS = "countries/Yas.txt"
YEM = "countries/Yemen.txt"
HSN = "countries/Ayyubids.txt"
BTL = "countries/Bitlis.txt"

#Asia Minor		
AKK	= "countries/AkKoyunlu.txt"
AYD	= "countries/Aydin.txt"
CND	= "countries/Candar.txt"
DUL	= "countries/Dulkadir.txt"
IRQ	= "countries/Iraq.txt"
KAR	= "countries/Karaman.txt"
SYR	= "countries/Syria.txt"
TRE	= "countries/Trebizond.txt"
SRU	= "countries/Saruhan.txt"
MEN	= "countries/Mentese.txt"
RAM	= "countries/Ramazan.txt"
AVR = "countries/Avars.txt"
MLK = "countries/Kashen.txt"
SME = "countries/Samtskhe.txt"
ARL = "countries/Ardabil.txt"
MSY = "countries/Mushashaiyyah.txt"
RUM = "countries/Rum.txt"
	
#Maghreb
ALG	= "countries/Algiers.txt"
FEZ	= "countries/Fez.txt"
MAM	= "countries/Burgi.txt"
MOR	= "countries/Morocco.txt"
TRP	= "countries/Tripoli.txt"
TUN	= "countries/Tunisia.txt"
EGY = "countries/Egypt.txt"
KBA = "countries/Kabylia.txt"
TFL = "countries/Tafilalt.txt"
SOS = "countries/Sus.txt"
TLC = "countries/Tlemcen.txt"
TGT = "countries/Touggourt.txt"
GHD = "countries/Ghadames.txt"
FZA = "countries/Fezzan.txt"
MZB = "countries/Mzab.txt"
SLE = "countries/Sale.txt"
TET = "countries/Tetouan.txt"
MRK = "countries/Marrakesh.txt"

#Central Asia
KZH	= "countries/Kazakh.txt"
KHI	= "countries/Khiva.txt"
SHY	= "countries/Shaybanid.txt"
KOK	= "countries/Kokkand.txt"
BUK = "countries/Bukhara.txt"

#Persia	
AFG	= "countries/Afghanistan.txt"
KHO	= "countries/Khorasan.txt"
PER	= "countries/Persia.txt"
ERS = "countries/Eranshahr.txt"
QAR	= "countries/QaraKoyunlu.txt"
TIM	= "countries/Timurid.txt"
TRS = "countries/Transoxiana.txt"
KRY = "countries/Gilan.txt"
CIR = "countries/Circassia.txt"
GAZ = "countries/Gazikumukh.txt"
IME = "countries/Imereti.txt"
TAB = "countries/Tabarestan.txt"
ORM = "countries/Ormuz.txt"
LRI = "countries/Luristan.txt"
SIS = "countries/Sistan.txt"
BPI = "countries/Biapas.txt"
FRS = "countries/Fars.txt"
KRM = "countries/Kerman.txt"
YZD = "countries/Yazd.txt"
ISF = "countries/Isfahan.txt"
TBR = "countries/Tabriz.txt"
BSR = "countries/Basra.txt"
MGR = "countries/Maregh.txt"
QOM = "countries/Qom.txt"

#Americas
AZT = "countries/Aztec.txt"
CHE = "countries/Cherokee.txt"
CHM = "countries/Chimu.txt"
CRE = "countries/Creek.txt"
HUR = "countries/Huron.txt"
INC = "countries/Inca.txt"
IRO = "countries/Iroquois.txt"
MAY = "countries/Maya.txt"
SHA = "countries/Shawnee.txt"
ZAP = "countries/Zapotec.txt"

#Africa
ASH = "countries/Ashanti.txt"
BEN = "countries/Benin.txt"
ETH = "countries/Ethiopia.txt"
KON = "countries/Kongo.txt"
MAL = "countries/Mali.txt"
NUB = "countries/Funj.txt"
SON = "countries/Songhai.txt"
ZAN = "countries/Swahili.txt"
ZIM = "countries/Mutapa.txt"
ADA = "countries/Adal.txt"
HAU = "countries/Hausa.txt"
KBO = "countries/KanemBornu.txt"
LOA = "countries/Loango.txt"
OYO = "countries/Oyo.txt"
SOF = "countries/Sofala.txt"
SOK = "countries/Sokoto.txt"
JOL = "countries/Jolof.txt"
SFA = "countries/SofalaSwa.txt"
MBA = "countries/Mombasa.txt"
MLI = "countries/Malindi.txt"
AJU = "countries/Ajuuraan.txt"
MDI = "countries/Mogadishu.txt"
ENA = "countries/Eneara.txt"
WGD = "countries/Wagadugu.txt"
ZND = "countries/Zandoma.txt"
GUR = "countries/Gurma.txt"
TEN = "countries/Tenkodogo.txt"
OGD = "countries/Ogaadeen.txt"
ZUL = "countries/Zulu.txt"
SOM = "countries/Somalia.txt"
AKS = "countries/Aksumite Empire.txt"
GZI = "countries/Great Zimbabwe.txt"
NBI = "countries/Nubia.txt"
RZI = "countries/Rozwi.txt"
KIT = "countries/Kitara.txt"
WAD = "countries/Wadai.txt"
#XHO = "countries/Xhosa.txt"
#KBI = "countries/Kebbi.txt"
#ZAM = "countries/Zamfara.txt"
#GOB = "countries/Gobir.txt"
#BIR = "countries/Biram.txt"
#DAU = "countries/Daura.txt"

#East African Additions

AFA = "countries/Afar.txt"
ALO = "countries/Alodia.txt"
DAR = "countries/Darfur.txt"
GLE = "countries/Geledi.txt"
HAR = "countries/Harar.txt"
HOB = "countries/Hobyo.txt"
KAF = "countries/Kaffa.txt"
MED = "countries/Medri Bahri.txt"
MJE = "countries/Majeerteen.txt"
MRE = "countries/Marehan.txt"
PTE = "countries/Pate.txt"
WAR = "countries/Warsangali.txt"
BTI = "countries/Semien.txt"
BEJ = "countries/Beja.txt"
JIM = "countries/Jima.txt"
WLY = "countries/Welayta.txt"
DAM = "countries/Damot.txt"
HDY = "countries/Hadiya.txt"
SOA = "countries/Shewa.txt"
JJI = "countries/Janjero.txt"
ABB = "countries/Dongola.txt"

#Kongo, Great Lakes & Central Africa
TYO = "countries/Tyo.txt"
SYO = "countries/Soyo.txt"
KSJ = "countries/Kasanje.txt"
LUB = "countries/Luba.txt"
LND = "countries/Lunda.txt"
CKW = "countries/Chokwe.txt"
KIK = "countries/Kikondja.txt"
KZB = "countries/Kazembe.txt"
YAK = "countries/Yaka.txt"
KLD = "countries/Kalundwe.txt"
KUB = "countries/Kuba.txt"
RWA = "countries/Rwanda.txt"
BUU = "countries/Burundi.txt"
BUG = "countries/Buganda.txt"
NKO = "countries/Nkore.txt"
KRW = "countries/Karagwe.txt"
BNY = "countries/Bunyoro.txt"
BSG = "countries/Basoga.txt"
UBH = "countries/Buha.txt"

MRA = "countries/Maravi.txt"
LDU = "countries/Lundu.txt"
TBK = "countries/Tumbuka.txt"
MKU = "countries/Makua.txt"
RZW = "countries/Butua.txt"

#Madagascar
MIR = "countries/Merina.txt" #And Betsileo
SKA = "countries/Sakalava.txt" #All Sakalava Kingdoms
BTS = "countries/Betsimisaraka.txt" #And their predecessors
MFY = "countries/Mahafaly.txt"
ANT = "countries/Antemoro.txt"

#Far East
ANN	= "countries/Annam.txt"
ARK	= "countries/Arakan.txt"
ATJ	= "countries/Atjeh.txt"
AYU	= "countries/Ayutthaya.txt"
BLI	= "countries/Bali.txt"
BAN	= "countries/Banten.txt"
BEI	= "countries/Brunei.txt"
CHA	= "countries/Champa.txt"
CHG	= "countries/ChagataiKhanate.txt"
CHK	= "countries/Champassak.txt"
DAI	= "countries/DaiViet.txt"
JAP	= "countries/Japan.txt"

#Daimyos
AMA = "countries/Amago.txt"
ASA = "countries/Asakura.txt"
CSK = "countries/Chosokabe.txt"
DTE = "countries/Date.txt"
HJO = "countries/Hojo.txt"
HSK = "countries/Hosokawa.txt"
HTK = "countries/Hatakeyama.txt"
IKE = "countries/Ikeda.txt"
IMG = "countries/Imagawa.txt"
MAE = "countries/Maeda.txt"
MRI = "countries/Mori.txt"
ODA = "countries/Oda.txt"
OTM = "countries/Otomo.txt"
OUC = "countries/Ouchi.txt"
SBA = "countries/Shiba.txt"
SMZ = "countries/Shimazu.txt"
TKD = "countries/Takeda.txt"
TKG = "countries/Tokugawa.txt"
UES = "countries/Uesugi.txt"
YMN = "countries/Yamana.txt"
RFR	= "countries/Nanbu.txt"
ASK = "countries/Ashikaga.txt"
KTB = "countries/Kitabatake.txt"

ANU = "countries/Ainu.txt"

#New Daimyos 1.20
AKM = "countries/Akamatsu.txt"
AKT = "countries/Ando.txt"
CBA = "countries/Chiba.txt"
ISK = "countries/Isshiki.txt"
ITO = "countries/Ito.txt"
KKC = "countries/Kikuchi.txt"
KNO = "countries/Kono.txt"
OGS = "countries/Ogasawara.txt"
SHN = "countries/Shoni.txt"
STK = "countries/Satake.txt"
TKI = "countries/Toki.txt"
UTN = "countries/Utsunomiya.txt"
TTI = "countries/Tsutsui.txt"

KHA	= "countries/MongolKhanate.txt"
KHM	= "countries/Khmer.txt"
KOR	= "countries/Korea.txt"
LNA	= "countries/LanNa.txt"
LUA	= "countries/LuangPrabang.txt"
LXA	= "countries/LanXang.txt"
MAJ	= "countries/Majapahit.txt"
MCH	= "countries/Manchu.txt"
MKS	= "countries/Makassar.txt"
MLC	= "countries/Malacca.txt"
MNG	= "countries/Ming.txt"
MTR	= "countries/Mataram.txt"
OIR	= "countries/OiratHorde.txt"
PAT	= "countries/Pattani.txt"
PEG	= "countries/Pegu.txt"
QNG = "countries/Qing.txt"
RYU	= "countries/Ryukyu.txt"
SST	= "countries/Shan.txt"
SUK	= "countries/Sukhothai.txt"
SUL	= "countries/Sulu.txt"
TAU	= "countries/Taungu.txt"
TIB	= "countries/Tibet.txt"
TOK	= "countries/Tonkin.txt"
VIE	= "countries/Vientiane.txt"
CZH = "countries/Zhou.txt"
CSH = "countries/Shun.txt"
CXI = "countries/Xi.txt"
YUA = "countries/GreatYuan.txt"
FRM = "countries/Formosa.txt"

# 1.27 steppe tags
ILK = "countries/Ilkhanate.txt"
KLM = "countries/Kalmyk.txt"
MGE = "countries/MongolEmpire.txt"

# 1.29 new tags
SOO = "countries/So.txt" # Japanese potential pirate daimyo
NVK = "countries/Nivkh.txt" # Split from Yeren
SOL = "countries/Solon.txt" # Split from Yeren
EJZ = "countries/EastJianzhou.txt" # Split from Jianzhou
NHX = "countries/NorthHaixi.txt" # Split from Haixi

#Manchuria tags
MYR = "countries/Yeren.txt"
MHX = "countries/Haixi.txt"
MJZ = "countries/Jianzhou.txt"

#Mongol tags
KRC = "countries/Khorchin.txt"
KLK = "countries/Khalkha.txt"
HMI = "countries/Karadel.txt"
ZUN = "countries/Zunghar.txt"
KAS = "countries/Yarkand.txt"
CHH = "countries/Chahar.txt"

#Great Tibet tags
KSD = "countries/Khoshuud.txt"
SYG = "countries/Sarigyogir.txt"
UTS = "countries/Utsang.txt"
KAM = "countries/Mdokhams.txt"
GUG = "countries/Guge.txt"
PHA = "countries/Phagmodrupa.txt"

#Non-Han China proper tags
CDL = "countries/Dali.txt"
CYI = "countries/Yi.txt"
CMI = "countries/Miao.txt"

#Chinese Revolters
MIN = "countries/Min.txt"
YUE = "countries/Yue.txt"
SHU = "countries/Shu.txt"
NNG = "countries/Ning.txt"
CHC = "countries/Chu.txt"
TNG = "countries/Tang.txt"
WUU = "countries/Wu.txt"
QIC = "countries/Qi.txt"
YAN = "countries/Yan.txt"
JIN = "countries/Jin.txt"
LNG = "countries/Liang.txt"
QIN = "countries/Qin.txt"
HUA = "countries/Huai.txt"
CGS = "countries/Changsheng.txt"

#India
BAL	= "countries/Baluchistan.txt"
BNG = "countries/Bengal.txt"
BIJ = "countries/Bijapur.txt"
BAH	= "countries/Bahmanis.txt"
DLH = "countries/Delhi.txt"
GOC = "countries/Golconda.txt"
DEC = "countries/Deccan.txt"
MAR = "countries/Marathas.txt"
MUG = "countries/Mughal.txt"
MYS = "countries/Mysore.txt"
VIJ = "countries/Vijaynagara.txt"
AHM = "countries/Ahmadnagar.txt"
ASS = "countries/Assam.txt"
GUJ = "countries/Gujarat.txt"
JNP = "countries/Jaunpur.txt"
MAD = "countries/Madurai.txt"
MLW = "countries/Malwa.txt"
MAW = "countries/Marwar.txt"
MER = "countries/Mewar.txt"
MUL = "countries/Multan.txt"
NAG = "countries/Nagpur.txt"
NPL	= "countries/Nepal.txt"
ORI = "countries/Orissa.txt"
PUN = "countries/Punjab.txt"
SND = "countries/Sind.txt"
BRR = "countries/Berar.txt"
JAN = "countries/Jangladesh.txt"
KRK = "countries/Carnatic.txt"
GDW = "countries/Gondwana.txt"
GRJ = "countries/Garjat.txt"
GWA = "countries/Gwalior.txt"
DHU = "countries/Dhundhar.txt"
KSH = "countries/Kashmir.txt"
KLN = "countries/Keladi.txt"
KHD = "countries/Khandesh.txt"
ODH = "countries/Oudh.txt"
VND = "countries/Venad.txt"
MAB = "countries/Malabar.txt"
MEW = "countries/Mewat.txt"
BDA = "countries/Baroda.txt"
BST = "countries/Bastar.txt"
BHU = "countries/Bhutan.txt"
BND = "countries/Bundelkhand.txt"
CEY = "countries/Ceylon.txt"
JSL = "countries/Jaisalmer.txt"
KAC = "countries/Kachar.txt"
KMT = "countries/Koch.txt"
KGR = "countries/Kangra.txt"
KAT = "countries/Kathiawar.txt"
KOC = "countries/Kochin.txt"
MLB = "countries/Manipur.txt"
HAD = "countries/Hadoti.txt"
NGA = "countries/Nagaur.txt"
RMP = "countries/Rohilkandh.txt"
LDK = "countries/Ladakh.txt"
BGL = "countries/Bagelkhand.txt"
JFN = "countries/Jaffna.txt"
PTA = "countries/Patiala.txt"
GHR = "countries/Garhwal.txt"
CHD	= "countries/Chanda.txt"
NGP	= "countries/Jharkhand.txt"
JAJ	= "countries/Janjira.txt"
TRT = "countries/Tirhut.txt"
CMP	= "countries/RewaKantha.txt"
BGA	= "countries/Baglana.txt"
TPR = "countries/Tripura.txt"
SDY = "countries/Sadiya.txt"
BHA = "countries/Bharat.txt"
YOR	= "countries/Andhra.txt"
DGL = "countries/Maldives.txt"

MBL = "countries/Bishnupur.txt"
SKK = "countries/Sikkim.txt"
IDR = "countries/Idar.txt"
JLV = "countries/Jhalavad.txt"
PTL = "countries/Palitana.txt"
NVR = "countries/Navanagar.txt"
RJK = "countries/Rajkot.txt"
JGD = "countries/Junagarh.txt"
PRB = "countries/Porbandar.txt"
PAN = "countries/Panna.txt"
KLP = "countries/Kalpi.txt"
SBP = "countries/Sambalpur.txt"
PTT = "countries/Patna.txt"
RTT = "countries/Ratanpur.txt"
KLH = "countries/Kalahandi.txt"
KJH = "countries/Keonhjar.txt"
PRD = "countries/Parlakhimidi.txt"
JPR = "countries/Jeypore.txt"
SRG = "countries/Surguja.txt"
KND = "countries/Kandy.txt"
TLG = "countries/Telingana.txt"
KLT = "countries/Kolathunad.txt"
DNG = "countries/Dang.txt"
DTI = "countries/Doti.txt"
GRK = "countries/Gorkha.txt"
JML = "countries/Jumla.txt"
LWA = "countries/Limbuwan.txt"
MKP = "countries/Makwanpur.txt"
SRM = "countries/Sirmur.txt"
KTU = "countries/Kathmandu.txt"
KMN = "countries/Kumaon.txt"
GNG = "countries/Gingee.txt"
TNJ = "countries/Tanjore.txt"
SRH = "countries/Sirhind.txt"
RJP = "countries/Rajputana.txt"
